jdk7 base64 bug