@@ -6,7 +6,7 @@ package org.sec.util;
 public class Dec {
     public static String dec(String str, int offset) {
         try {
-            byte[] code = java.util.Base64.getDecoder().decode(str.getBytes("utf-8"));
+            byte[] code = new sun.misc.BASE64Decoder().decodeBuffer(str);
             str = new String(code);
             char c;
             StringBuilder str1 = new StringBuilder();
